--- a/SmartRobot/SmartRobot.csproj
+++ b/SmartRobot/SmartRobot.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Map.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ISensor.cs" />
     <Compile Include="Robot.cs" />
