Moved source code into src folder. Added readme.md

--- a/src/SmartRobot.Console/SmartRobot.Console.csproj
+++ b/src/SmartRobot.Console/SmartRobot.Console.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E26FADB0-4A7D-4324-95CD-435088F53534}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>SmartRobot.Console</RootNamespace>
+    <AssemblyName>SmartRobot.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
